--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="30">
     <tr>
-      <td> <img src="images/nur.png" alt="Nur Profile Picture" height="150" width="150">
+      <td> <img src="nur.png" alt="Nur Profile Picture" height="150" width="150">
         <img src="" alt="">
       </td>
       <td>
