--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="30">
     <tr>
-      <td> <img src="nur.png" alt="Nur Profile Picture" height="150" width="150">
+      <td> <img src="https://media.licdn.com/dms/image/D4D03AQGfo9HxVYYO7g/profile-displayphoto-shrink_800_800/0/1670697062863?e=1678320000&v=beta&t=rKSzux4hqVDZNnnWjdcfhYdEKz98citSw7qzEnfqvkc" alt="Nur Profile Picture" height="150" width="150">
         <img src="" alt="">
       </td>
       <td>
